# pre-commit-shfmt

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  noxfile.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml
src/pre_commit_shfmt/: __init__.py  main.py
